Adding the problem statements.

--- a/prologin/static/base.html
+++ b/prologin/static/base.html
@@ -44,7 +44,11 @@
           <a class="brand" href="#">Prologin</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="/team">L'équipe</a></li>
+              <li><a href="/team">L'équipe</a></li>
+              <li><a href="/problems/qcm2013">Prologin 2013</a></li>
+              <li><a href="/problems">Entraînement</a></li>
+              <li><a href="/centers">Les centres d'examen</a></li>
+              <li><a href="/users/3627">le_sphinx</a></li>
               <!-- <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li> -->
             </ul>
