--- a/prologin/problems/problem.html
+++ b/prologin/problems/problem.html
@@ -8,7 +8,11 @@
 <h1>{{ problem.props.title }}</h1>
 <p>Mémoire : {{ problem.props.mem }} octets</p>
 <p>Temps : {{ problem.props.time }} ms</p>
-{{ statement|markdown }}
+{% if statement_markdown  %}
+  {{ statement|markdown }}
+{% else %}
+  {{ statement }}
+{% endif %}
 <h3>Exemples</h3>
 {% for example in examples %}
 	Exemple d'entrée :
